fixed some spacing on the page, trading mostly

--- a/assets/styles/layouts/_global_styles.scss
+++ b/assets/styles/layouts/_global_styles.scss
@@ -1,5 +1,4 @@
 html{
-	overflow-x: hidden;
 	width:100%;
 }
 
@@ -49,9 +48,8 @@ a:hover{
 .main-container {
 	height:100%;
 	width:100%;
-	margin:0;
-	padding:0;
 }
+
 .main-container section{
 	float:right;
 	position: relative;
