--- a/assets/styles/layouts/_trading.scss
+++ b/assets/styles/layouts/_trading.scss
@@ -1,13 +1,13 @@
 .trading-header{
-	width:100%;
+	width:90%;
+	padding:0 5% 0 5%;
 	background:$dark-grey;
 }
 
 .trading-title{
 	position:relative;
 	display:inline-block;
-	width: 45%;
-	padding-left: 5%;
+	width: 40%;
 	font-family: 'DIN-bold';
 	font-size: 22px;
 	letter-spacing: 0.61px;
@@ -17,15 +17,14 @@
 .trading-menu{
 	position:relative;
 	display:inline-block;
-	width: 45%;
+	width: 60%;
 }
 
 .trading-menu div{
-	
+	vertical-align: center;
 	position:relative;
 	display:inline-block;
-	float:left;
-	left:12%;
+	float:right;
 	padding-left:5%;
 	color:$light-blue;
 	text-align: center;
@@ -34,12 +33,13 @@
 .tm1{
 	font-family: 'DIN';
 	font-size: 14px;
-	padding-top: 1%;
+	padding-top: .4%;
 }
 
 .tm2{
-	padding-top: 2%;
+	font-family: 'DIN';
 	font-size: 11px;
+	padding-top: 1%;
 }
 
 .trading-extra-options{
@@ -57,6 +57,7 @@
 	color:$light-blue;
 	font-family: 'DIN-light-alt';
 	letter-spacing: 1px;
+
 }
 
 .trading-extra-options div input{
@@ -84,7 +85,7 @@
 
 
 .trading-column-names{
-	width:100%;
+	width:90%;
 	background:$egg-white;
 	float:left;
 	color:$dark-grey;
@@ -92,7 +93,6 @@
 	font-size: 13px;
 	font-family: 'DIN-bold';
 	color:$dark-blue;
-	text-align: left;
 	padding:.7% 5% .7% 5%;
 }
 
@@ -106,18 +106,23 @@
 }
 
 .trading-column-names th{
-	width: 4%;
+	width: 5%;
+}
+
+.house{
+	text-align: left;
 }
 
 .mid{
 	position:relative;
-	left:10%;
-	width: 4%;
+	left:5%;
+	text-align: left;
+
 }
 
 .end{
 	position:relative;
-	left:20%;
-	padding-left: 4%;
+	padding-left: 5%;
+	text-align: right;
 }
 
